--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -25,10 +25,10 @@
             <a class="nav-link" href="public/images/CV.pdf" target="_blank">Mon CV</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="users/createUsers/">users</a>
+            <a class="nav-link" href="users/listUsers/">users</a>
           </li>
           <a class="nav-item nav-link" href=""></a>
-          <a  href="users/editUsers/" type="button" class="btn btn-outline-secondary">S'inscrire</a>
+          <a  href="users/createUsers" type="button" class="btn btn-outline-secondary">S'inscrire</a>
           <a class="nav-item nav-link" href=""></a>
           <a  href="" type="button" class="btn btn-success">Se connecter</a>
         </ul>
