layout-admin : css

--- a/src/Views/Template/layout-admin.twig
+++ b/src/Views/Template/layout-admin.twig
@@ -25,8 +25,8 @@
 
 		<section class="py-5">
 			<div class="container content">
-				<div class="row">
-					<div> {% block content %}{% endblock %}
+				<div class="row admin-bloc1">
+					<div class="admin-bloc2"> {% block content %}{% endblock %}
 					</div>
 				</div>
 				<div class="row">
