--- a/src/Views/comment.twig
+++ b/src/Views/comment.twig
@@ -4,7 +4,7 @@
     <thead style="text-align:left; font-size: 17px; ">
       <tr>
         <th style=" width: 50%; background-color: ; color: #000000; border-width: 0px; border-color: #000000; border-style: ; ">
-        Article : {{ item.posts_id }}  - le  ({{ item.date_comment }})
+        {{ item.user_id }} : {{ item.posts_id }}  - le  ({{ item.date_comment }})
         </th>
       </tr>
     </thead>
