--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -6,7 +6,7 @@
  body {
   padding-top: 56px;
   background-color:#eaedf1;
-
+  text-align: center;
 
   /* background-color: #ffffff; */
 }
@@ -91,6 +91,13 @@ h1.title-post{
 #img_blog_admin {
   width: 50px;
   height: 50px;
+}
+.admin-bloc1{
+  padding-left: 10px;
+}
+.admin-bloc2{
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .flux{
