folder admin create + ajust code

--- a/src/Views/User_delete.twig
+++ b/src/Views/User_delete.twig
@@ -6,7 +6,7 @@
     <h1 class="display-5">L'utilisateur {{ one.pseudo }}  a bien été supprimé</h1>
     <br />
     <p class="lead">
-        <a class="btn btn-primary btn-lg" href="users/createUsers/" role="button">fermer</a>
+        <a class="btn btn-primary btn-lg" href="users/listUsers/" role="button">fermer</a>
     </p>
     </div>
 </div>
