--- a/src/Views/admin/admin_users.twig
+++ b/src/Views/admin/admin_users.twig
@@ -34,7 +34,7 @@
    {% endfor%}
 </table>
 
-<p class="h4 mb-4">Ajouter un nouvel utilisateur</p>
+<p class="h4 mb-4">Ajouter un nouvel utilisateur</p><a href="users/createUsers" class="badge badge-primary">Ajout</a>
 
 {% include 'User_edit.twig'  with {'form': addUsers, 'errors': errors, 'action': action } %}
 
