--- a/src/Views/Template/layout-admin.twig
+++ b/src/Views/Template/layout-admin.twig
@@ -22,6 +22,11 @@
 	<body>
 		<!-- Navigation -->
 		{{ include('Template/navbar.twig') }}
+		<section class="py-5">
+			{# <div class="container">
+					{% include 'Template/menu_admin.twig' %}
+			</div> #}
+		</section>
 
 		<section class="py-5">
 			<div class="container content">
