--- a/src/Views/admin/admin_users.twig
+++ b/src/Views/admin/admin_users.twig
@@ -20,7 +20,7 @@
        <td>{{ user.id }}</td>
        <td>{{ user.pseudo }}</td>
        <td>{{ user.email }}</td>
-       <td>{{ user.password }}</td>
+       <td>{{ ' ... '~user.password|slice(0,20)~' ...'}}</td>
        <td>{{ user.role }}</td>
        <td>
 					<a href="users/update/{{user.id}}">
