--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -28,7 +28,7 @@
             <a class="nav-link" href="users/listUsers/">users</a>
           </li>
           <a class="nav-item nav-link" href=""></a>
-          <a  href="users/createUsers" type="button" class="btn btn-outline-secondary">S'inscrire</a>
+          <a  href="inscription/createUsers" type="button" class="btn btn-outline-secondary">S'inscrire</a>
           <a class="nav-item nav-link" href=""></a>
           <a  href="" type="button" class="btn btn-success">Se connecter</a>
         </ul>
