--- a/src/Views/User_edit.twig
+++ b/src/Views/User_edit.twig
@@ -71,7 +71,9 @@
    
    <p><input type="text"        name="role"       value="{{ user.role }}"     id="defaultContactFormName" class="form-control mb-4" placeholder="role" /></p>
    <p><input type="submit"      name="formuser"   value="envoyez" /></p>
-
+   {% if action == 'update' %}
+   <p><a class="btn btn-primary" href="users/listUsers/" role="button">Retour</a></p>
+   {% endif %}
 </form>
 
 {% endblock content %}
