--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -30,7 +30,7 @@
           <a class="nav-item nav-link" href=""></a>
           <a  href="inscription/createUsers" type="button" class="btn btn-outline-secondary">S'inscrire</a>
           <a class="nav-item nav-link" href=""></a>
-          <a  href="" type="button" class="btn btn-success">Se connecter</a>
+          <a  href="Auth/login" type="button" class="btn btn-success">Se connecter</a>
         </ul>
       </div>
     </div>
