--- a/src/Views/User_edit.twig
+++ b/src/Views/User_edit.twig
@@ -1,79 +1,81 @@
 {% if not mode %}
-{% extends 'Template/layout.twig' %}
+	{% extends 'Template/layout.twig' %}
 {% endif %}
 
 {% block content %}
 
-<br />
-  {# {% set log %} #}
-  <p class="h4 mb-4">{{ configs.site.label }} : </p>
- 
-  <h2>utilisateur : {{ user.pseudo }}</h2>
-   {# {% endset %} #}
+	<br/>
+	{# {% set log %} #}
+	<p class="h4 mb-4">{{ configs.site.label }}
+		
+	</p>
 
-   {% if errors %}
-   <div class="alert alert-danger">
-   <p>Le formulaire n'est pas rempli correctement :</p>
-    {% for msg in errors %}
-      <ul>
-         <li>{{ msg }}</li>
-      </ul>
-   {% endfor %}
-   </div>
-   {% endif %}
-<form method="post" action="users/{{ action }}/" class="text-center border border-light p-5">
- 
-   <p><input type="hidden"      name="id"         value="{{ user.id }}" /></p>
-   {# <p><input type="email"       name="email"      value="{{ user.email }}"    id="defaultContactFormName" class="form-control mb-4" placeholder="email" ></p> #}
-   {# <p><input type="email"       name="email2"     value="{{ user.email2 }}"    id="defaultContactFormName" class="form-control mb-4" placeholder="email confirmation" ></p> #}
-   <div class="input-group mb-3">
-      <div class="input-group-prepend">
-         <span class="input-group-text">Email</span>
-      </div>
-      <input type="email" name="email" value="{{ user.email }}" class="form-control" />
-   </div>   
-   <div class="input-group mb-3">
-      <div class="input-group-prepend">
-         <span class="input-group-text">Confirmez Email</span>
-      </div>
-      {% if action == 'update' %}
-         <input type="email" name="email2" value="{{ user.email2|default(user.email) }}" class="form-control" />
-      {% else %}
-         <input type="email" name="email2" value="{{ user.email2 }}" class="form-control" />
-      {% endif %}
-   </div>
-   <div class="input-group mb-3">
-      <div class="input-group-prepend">
-         <span class="input-group-text">pseudo</span>
-      </div>
-      {% if action == 'update' %}
-      <input type="text" name="pseudo" value="{{ user.pseudo|default(user.pseudo) }}" class="form-control" />
-      {% else %} 
-      <input type="text" name="pseudo" value="{{ user.pseudo }}" class="form-control" />
-      {% endif %}
-   </div>
-   <div class="input-group mb-3">
-      <div class="input-group-prepend">
-         <span class="input-group-text">mot de passe</span>
-      </div>
-      <input type="password" name="password" value="{{ user.password }}" class="form-control" />
-   </div>
-   <div class="input-group mb-3">
-      <div class="input-group-prepend">
-         <span class="input-group-text">confirmez mot de passe</span>
-      </div>
-      {% if action == 'update' %}
-         <input type="password" name="password2" value="{{ user.password2|default(user.password) }}" class="form-control" />
-      {% else %}
-         <input type="password" name="password2" value="{{ user.password2 }}" class="form-control" />
-      {% endif %}
-   </div>
-   
-   <p><input type="text"        name="role"       value="{{ user.role }}"     id="defaultContactFormName" class="form-control mb-4" placeholder="role" /></p>
-   <p><input type="submit"      name="formuser"   value="envoyez" /></p>
-   {% if action == 'update' %}
-   <p><a class="btn btn-primary" href="users/listUsers/" role="button">Retour</a></p>
-   {% endif %}
-</form>
+	<h2>utilisateur :
+		{{ user.pseudo }}</h2>
+	{# {% endset %} #}
 
+	{% if errors %}
+		<div class="alert alert-danger">
+			<p>Le formulaire n'est pas rempli correctement :</p>
+			{% for msg in errors %}
+				<ul>
+					<li>{{ msg }}</li>
+				</ul>
+			{% endfor %}
+		</div>
+	{% endif %}
+	<form method="post" action="users/{{ action }}/" class="text-center border border-light p-5">
+
+		<p><input type="hidden" name="id" value="{{ user.id }}"/></p><div class="input-group mb-3">
+			<div class="input-group-prepend">
+				<span class="input-group-text">Email</span>
+			</div>
+			<input type="email" name="email" value="{{ user.email }}" class="form-control"/>
+		</div>
+		<div class="input-group mb-3">
+			<div class="input-group-prepend">
+				<span class="input-group-text">Confirmez Email</span>
+			</div>
+			{% if action == 'update' %}
+				<input type="email" name="email2" value="{{ user.email2|default(user.email) }}" class="form-control"/>
+			{% else %}
+				<input type="email" name="email2" value="{{ user.email2 }}" class="form-control"/>
+			{% endif %}
+		</div>
+		<div class="input-group mb-3">
+			<div class="input-group-prepend">
+				<span class="input-group-text">pseudo</span>
+			</div>
+			{% if action == 'update' %}
+				<input type="text" name="pseudo" value="{{ user.pseudo|default(user.pseudo) }}" class="form-control"/>
+			{% else %}
+				<input type="text" name="pseudo" value="{{ user.pseudo }}" class="form-control"/>
+			{% endif %}
+		</div>
+		<div class="input-group mb-3">
+			<div class="input-group-prepend">
+				<span class="input-group-text">mot de passe</span>
+			</div>
+			<input type="password" name="password" value="{{ user.password }}" class="form-control"/>
+		</div>
+		<div class="input-group mb-3">
+			<div class="input-group-prepend">
+				<span class="input-group-text">confirmez mot de passe</span>
+			</div>
+			{% if action == 'update' %}
+				<input type="password" name="password2" value="{{ user.password2|default(user.password) }}" class="form-control"/>
+			{% else %}
+				<input type="password" name="password2" value="{{ user.password2 }}" class="form-control"/>
+			{% endif %}
+		</div>
+
+		<p><input type="text" name="role" value="{{ user.role }}" id="defaultContactFormName" class="form-control mb-4" placeholder="role"/></p>
+		<p><input type="submit" name="formuser" value="envoyez"/></p>
+		{% if action == 'update' %}
+			<p>
+				<a class="btn btn-primary" href="users/listUsers/" role="button">Retour</a>
+			</p>
+		{% endif %}
+	</form>
+	
 {% endblock content %}
