--- a/src/Views/admin/admin_users.twig
+++ b/src/Views/admin/admin_users.twig
@@ -2,6 +2,9 @@
 
 {% block content %}
 <h1> Liste des utilisateurs </h1>
+<a href="users/createUsers">
+			<button type="button" class="btn btn-success">ajouter</button></a>
+
 <br />
 <table class="table">
     <thead class="thead-light">
@@ -23,19 +26,19 @@
        <td>{{ ' ... '~user.password|slice(0,20)~' ...'}}</td>
        <td>{{ user.role }}</td>
        <td>
-					<a href="users/update/{{user.id}}">
-						<button type="button" class="btn btn-warning">modifier</button>
-				</td>
-				<td>
-					<a href="users/delete/{{user.id}}" onclick="return window.confirm('Êtes-vous certain de vouloir supprimer cette utilisateur ?!')"> 
-						<button  type="button" class="btn btn-danger" >supprimer</button></a>
-				</td> 
+			<a href="users/update/{{user.id}}">
+			<button type="button" class="btn btn-warning">modifier</button>
+		</td>
+		<td>
+			<a href="users/delete/{{user.id}}" onclick="return window.confirm('Êtes-vous certain de vouloir supprimer cette utilisateur ?!')"> 
+			<button  type="button" class="btn btn-danger" >supprimer</button></a>
+		</td> 
     </tr>
    {% endfor%}
 </table>
 
 {# <p class="h4 mb-4">Ajouter un nouvel utilisateur</p><a href="users/createUsers" class="badge badge-primary">Ajout</a> #}
 
-{% include 'User_edit.twig'  with {'errors': errors, 'action': action, 'configs': configs, 'mode': 'bloc' } %}
+{# {% include 'User_edit.twig'  with {'errors': errors, 'action': action, 'configs': configs, 'mode': 'bloc' } %} #}
     
 {% endblock content %}
