--- a/src/Views/inscription.twig
+++ b/src/Views/inscription.twig
@@ -1,65 +1,82 @@
 {% extends 'Template/layout.twig' %}
 {% block content %}
-  <p class="h4 mb-4">{{ configs.site.label }} : </p>
-  
- {% if errors %}
-   <div class="alert alert-danger">
-   <p>Le formulaire n'est pas rempli correctement :</p>
-    {% for msg in errors %}
-      <ul>
-         <li>{{ msg }}</li>
-      </ul>
-   {% endfor %}
-   </div>
-   {% endif %}
-<form method="post" action="inscription/{{ action }}/" class="text-center border border-light p-5">
- 
-   <p><input type="hidden"      name="id"         value="{{ user.id }}" /></p>
-   <div class="input-group mb-3">
-      <div class="input-group-prepend">
-         <span class="input-group-text">Email</span>
-      </div>
-      <input type="email" name="email" value="{{ user.email }}" class="form-control" />
-   </div>   
-   <div class="input-group mb-3">
-      <div class="input-group-prepend">
-         <span class="input-group-text">Confirmez Email</span>
-      </div>
-      {% if action == 'update' %}
-         <input type="email" name="email2" value="{{ user.email2|default(user.email) }}" class="form-control" />
-      {% else %}
-         <input type="email" name="email2" value="{{ user.email2 }}" class="form-control" />
-      {% endif %}
-   </div>
-   <div class="input-group mb-3">
-      <div class="input-group-prepend">
-         <span class="input-group-text">pseudo</span>
-      </div>
-      {% if action == 'update' %}
-      <input type="text" name="pseudo" value="{{ user.pseudo|default(user.pseudo) }}" class="form-control" />
-      {% else %} 
-      <input type="text" name="pseudo" value="{{ user.pseudo }}" class="form-control" />
-      {% endif %}
-   </div>
-   <div class="input-group mb-3">
-      <div class="input-group-prepend">
-         <span class="input-group-text">mot de passe</span>
-      </div>
-      <input type="password" name="password" value="{{ user.password }}" class="form-control" />
-   </div>
-   <div class="input-group mb-3">
-      <div class="input-group-prepend">
-         <span class="input-group-text">confirmez mot de passe</span>
-      </div>
-      {% if action == 'update' %}
-         <input type="password" name="password2" value="{{ user.password2|default(user.password) }}" class="form-control" />
-      {% else %}
-         <input type="password" name="password2" value="{{ user.password2 }}" class="form-control" />
-      {% endif %}
-   </div>
-   
-   <p><input type="text"        name="role"       value="{{ user.role }}"     id="defaultContactFormName" class="form-control mb-4" placeholder="role" /></p>
-   <p><input type="submit"      name="formSignUp"   value="envoyez" /></p>
+	<p class="h4 mb-4">{{ configs.site.label }}</p>
 
-</form>
-{% endblock content %}
+	{% if errors %}
+		<div class="alert alert-danger">
+			<p>Le formulaire n'est pas rempli correctement :</p>
+			{% for msg in errors %}
+				<ul>
+					<li>{{ msg }}</li>
+				</ul>
+			{% endfor %}
+		</div>
+	{% endif %}
+	<div class="container register">
+		<div class="row">
+			<div class="col-md-12">
+				<ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
+					<li class="nav-item">
+						<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">S'inscrire</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Se connecter</a>
+					</li>
+				</ul>
+				<div class="tab-content" id="myTabContent">
+					<div class="tab-pane fade show active text-align form-new" id="home" role="tabpanel" aria-labelledby="home-tab">
+						<h3 class="register-heading">S'inscrire</h3>
+						<div class="row register-form">
+							<div class="col-md-12">
+								<form method="post">
+									<div class="form-group">
+										<input type="email" name="email" class="form-control" placeholder="Your Email *" value="{{ user.email }}"/>
+									</div>
+									<div class="form-group">
+										<input type="email2" name="email2" class="form-control" placeholder="Your Email confimed *" value="{{ user.email2 }}"/>
+									</div>
+									<div class="form-group">
+										<input type="text" name="pseudo" class="form-control" placeholder="Your pseudo *" value="{{ user.pseudo }}"/>
+									</div>
+									<div class="form-group">
+										<input type="password" name="password" class="form-control" placeholder="Your Email *" value="{{ user.password }}"/>
+									</div>
+									<div class="form-group">
+										<input type="password" name="password2" class="form-control" placeholder="Your Password *" value="{{ user.password }}"/>
+									</div>
+									<div class="form-group">
+										<input type="text" name="role" class="form-control" placeholder="Your role *" value="{{ user.role }}"/>
+									</div>
+									<div class="form-group">
+										<input type="submit" name="formuser" class="btnContactSubmit" value="Login"/>
+										<a href="ForgetPassword.php" class="btnForgetPwd" value="Login">Forget Password?</a>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+              
+					<div class="tab-pane fade show text-align form-new" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+						<h3 class="register-heading">Se connecter</h3>
+						<div class="row register-form">
+							<div class="col-md-12">
+								<form method="post">
+									<div class="form-group">
+										<input type="text" name="LGform2_user" class="form-control" placeholder="Your Email *" value="" required=""/>
+									</div>
+									<div class="form-group">
+										<input type="password" name="LGform2_pwd" class="form-control" placeholder="Your Password *" value="" required=""/>
+									</div>
+									<div class="form-group">
+										<input type="submit" name="LGform2" class="btnContactSubmit" value="Login"/>
+										<a href="ForgetPassword.php" class="btnForgetPwd" value="Login">Forget Password?</a>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>{% endblock content %}
