--- a/src/Views/inscription.twig
+++ b/src/Views/inscription.twig
@@ -33,16 +33,16 @@
 										<input type="email" name="email" class="form-control" placeholder="Your Email *" value="{{ user.email }}"/>
 									</div>
 									<div class="form-group">
-										<input type="email2" name="email2" class="form-control" placeholder="Your Email confimed *" value="{{ user.email2 }}"/>
+										<input type="email2" name="email2" class="form-control" placeholder="Confimed Email  *" value="{{ user.email2 }}"/>
 									</div>
 									<div class="form-group">
 										<input type="text" name="pseudo" class="form-control" placeholder="Your pseudo *" value="{{ user.pseudo }}"/>
 									</div>
 									<div class="form-group">
-										<input type="password" name="password" class="form-control" placeholder="Your Email *" value="{{ user.password }}"/>
+										<input type="password" name="password" class="form-control" placeholder="Your Password *" value="{{ user.password }}"/>
 									</div>
 									<div class="form-group">
-										<input type="password" name="password2" class="form-control" placeholder="Your Password *" value="{{ user.password }}"/>
+										<input type="password" name="password2" class="form-control" placeholder="Confirmed Password *" value="{{ user.password }}"/>
 									</div>
 									<div class="form-group">
 										<input type="text" name="role" class="form-control" placeholder="Your role *" value="{{ user.role }}"/>
