usersController : fix verifications

--- a/src/Views/User_edit.twig
+++ b/src/Views/User_edit.twig
@@ -6,9 +6,7 @@
 
 	<br/>
 	{# {% set log %} #}
-	<p class="h4 mb-4">{{ configs.site.label }}
-		
-	</p>
+	<p class="h4 mb-4">{{ configs.site.label }}</p>
 
 	<h2>utilisateur :
 		{{ user.pseudo }}</h2>
