--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -16,7 +16,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="home/listArticles/">Tous les posts</a>
+            <a class="nav-link" href="Articles/listArticles/">Liste des Articles</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
