Articles : modif code

--- a/src/Views/Article_edit.twig
+++ b/src/Views/Article_edit.twig
@@ -4,7 +4,7 @@
 
 <br />
 
-<form method="post" action="admin/edit/" class="text-center border border-light p-5">
+<form method="post" action="Articles/edit/" class="text-center border border-light p-5">
   <h2>{{ article.title }}</h2>
   <p class="h4 mb-4">gestion de l'article</p>
 
