Admin : modif link + code

--- a/src/Views/admin/admin_post.twig
+++ b/src/Views/admin/admin_post.twig
@@ -39,7 +39,7 @@
 ---------------------------------------------------------------------------------------------------------------------------------
 <br />
 
-<form method="post" action="admin/edit/" class="text-center border border-light p-5">
+<form method="post" action="Articles/edit/" class="text-center border border-light p-5">
   <p class="h4 mb-4">Ajouter un article</p>
 
    <p><input type="hidden"  name="id"         value=""></p>
