--- a/src/Views/home.twig
+++ b/src/Views/home.twig
@@ -53,7 +53,7 @@
     </div>
     {% endfor%}
     <div class="">
-      <a href="home/listArticles" class="btn btn-primary btn-lg">Cliquez pour voir tous les articles</a>
+      <a href="Articles/listArticles" class="btn btn-primary btn-lg">Cliquez pour voir tous les articles</a>
     </div>
 </ul>
 
