--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -19,7 +19,7 @@
             <a class="nav-link" href="Articles/listArticles/">Liste des Articles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="src/views/contact.twig">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="public/images/CV.pdf" target="_blank">Mon CV</a>
