--- a/src/Views/inscription.twig
+++ b/src/Views/inscription.twig
@@ -26,14 +26,14 @@
 			<div class="col-md-12">
 				<ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
 					<li class="nav-item">
-						<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">S'inscrire</a>
+						<a class="nav-link  active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Se connecter</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Se connecter</a>
+						<a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">S'inscrire</a>
 					</li>
 				</ul>
 				<div class="tab-content" id="myTabContent">
-					<div class="tab-pane fade show active text-align form-new" id="home" role="tabpanel" aria-labelledby="home-tab">
+					<div class="tab-pane fade show  text-align form-new" id="home" role="tabpanel" aria-labelledby="home-tab">
 						<h3 class="register-heading">S'inscrire</h3>
 						<div class="row register-form">
 							<div class="col-md-12">
@@ -65,7 +65,7 @@
 						</div>
 					</div>
               
-					<div class="tab-pane fade show text-align form-new" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+					<div class="tab-pane fade show active text-align form-new" id="profile" role="tabpanel" aria-labelledby="profile-tab">
 						<h3 class="register-heading">Se connecter</h3>
 						<div class="row register-form">
 							<div class="col-md-12">
