--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -11,7 +11,11 @@
 
   /* background-color: #ffffff; */
 }
-
+#pseudo{
+  color: beige;
+  font-weight:bold;
+  font-size: 15px;
+}
 .title-post{
   text-shadow: 2px 2px 7px #000000;
 }
