--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -1,37 +1,47 @@
- <base href="/projet-5/">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-    
-      <a class="navbar-brand" href="#">
-      <img class="card_img" src="public/images/logo4.png" alt="" style="line-height:80px; height:80px;" />
-      LE BLOG des meilleures séries US</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Articles/listArticles/">Liste des Articles</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="src/views/contact.twig">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="public/images/CV.pdf" target="_blank">Mon CV</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="users/listUsers/">users</a>
-          </li>
-          <a class="nav-item nav-link" href=""></a>
-          <a  href="users/createUsers" type="button" class="btn btn-outline-secondary">S'inscrire</a>
-          <a class="nav-item nav-link" href=""></a>
-          <a  href="Auth/login" type="button" class="btn btn-success">Se connecter</a>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<base href="/projet-5/">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="#">
+			<img class="card_img" src="public/images/logo4.png" alt="" style="line-height:80px; height:80px;"/>
+			Le BLOG des meilleures séries US</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarResponsive">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="">Home
+						<span class="sr-only">(current)</span>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="Articles/listArticles/">Liste des Articles</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="src/views/contact.twig">Contact</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="public/images/CV.pdf" target="_blank">Mon CV</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="users/listUsers/">users</a>
+				</li>
+				{% if session.user is defined %}
+				<li class="nav-item">
+					<a class="nav-link" href="Auth/login/">Mon profil</a>
+				</li>
+					<li class="nav-item">
+						<a class="nav-link" id="pseudo">{{ session.user.pseudo }}</a>
+					</li>
+					<div class="rounded-top my-2 my-lg-0">
+						<a href="Auth/logout" type="button" class="btn btn-danger">Deconnexion</a>
+					</div>
+				{% else %}
+					<div class=" rounded-top my-2 my-lg-0">
+						<a href="users/createUsers" type="button" class="btn btn-outline-success">Se connecter</a>
+					</div>
+				{% endif %}
+			</ul>
+		</div>
+	</div>
+</nav>
