--- a/src/Views/article.twig
+++ b/src/Views/article.twig
@@ -13,11 +13,12 @@
 
 
 <h2>{{ article.title }}</h2>
+{{ session }}
 <h3>Vos commentaires ci-dessous :</h3>
   <form method="post" action="articles/read/{{ article.id }}" class="text-center border border-light p-5 comment">
   <p><input type="hidden"  name="id"        value=""></p>
   <p><input type="hidden"  name="posts_id"  value="{{ article.id }}"  id="defaultContactFormName" class="form-control mb-4"></p>
-  <p><input type="text"    name="user_id"   value=""  id="defaultContactFormName"                 class="form-control mb-4" placeholder="mettre 0 pour l'instant"></p>
+  <p><input type="text"    name="user_id"   value="{{ session.user.id }}"  id="defaultContactFormName"                 class="form-control mb-4" placeholder="mettre 0 pour l'instant"></p>
   {# <p><input type="text"    name="comment"   value "" id="defaultContactFormName"                  class="form-control ftext"  placeholder="ici !! votre commentaire " required data-validation-required-message="Veuillez entrer votre commentaire."></p> #}
   <p><textarea rows="2" class="form-control ftext" id="comment" placeholder="Votre message" name="comment" required data-validation-required-message="Veuillez entrer votre commentaire."></textarea></p>
   <p><input type="submit"                   value="envoyez"></p>
