add contact in home

--- a/src/Views/Template/layout.twig
+++ b/src/Views/Template/layout.twig
@@ -37,6 +37,11 @@
 				</div>
 			</div>
 		</section>
+		<section class="py-5">
+			<div class="container">
+				{% block content2 %}{% endblock %}
+			</div>
+		</section>
 		<section>
 			{% include 'Template/footer.twig' %}
 		</section>
