--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -18,7 +18,7 @@
 					<a class="nav-link" href="Articles/listArticles/">Liste des Articles</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="src/views/contact.twig">Contact</a>
+					<a class="nav-link" href="#contact">Contact</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="public/images/CV.pdf" target="_blank">Mon CV</a>
