Modif code Comment to article v1

--- a/src/Views/comment.twig
+++ b/src/Views/comment.twig
@@ -1,20 +1,10 @@
 
 {% for item in comments %}
-  <table style="border-collapse: separate; border-spacing: 20px 5%; width: 100%;  border-width: 0px; border-color: #000000; border-style: ; -moz-border-radius: 10px; -webkit-border-radius: 10px; -khtml-border-radius: 10px; border-radius: 10px; -webkit-box-shadow: 2px 4px 12px #666; -moz-box-shadow: 2px 4px 12px #666; box-shadow: 2px 4px 12px #666; margin-bottom: 20px"  cellspacing="20">
-    <thead style="text-align:left; font-size: 17px; ">
-      <tr>
-        <th style=" width: 50%; background-color: ; color: #000000; border-width: 0px; border-color: #000000; border-style: ; ">
-        {{ item.pseudo }} : {{ item.posts_id }}  - le  ({{ item.date_comment }})
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td style=" width: 50%; border-width: 0px; border-color: #000000; border-style: solid; font-size:16px;">
-        commentaire : {{ item.comment }}
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="card" style="border-collapse: separate; border-spacing: 20px 5%; width: 100%;  border-width: 0px; border-color: #000000; border-style: ; -moz-border-radius: 10px; -webkit-border-radius: 10px; -khtml-border-radius: 10px; border-radius: 10px; -webkit-box-shadow: 2px 4px 12px #666; -moz-box-shadow: 2px 4px 12px #666; box-shadow: 2px 4px 12px #666; margin-bottom: 20px"  cellspacing="15">
+  <h6 class="card-header text-left">{{ item.pseudo }}  - <em>le {{ item.date_comment }}</em></h6>
+  <div class="card-body">
+    <p class="card-text">{{ item.comment }}</p>
+  </div>
+</div>
 {% endfor%}
 
