--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -3,7 +3,7 @@
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#">
 			<img class="card_img" src="public/images/logo4.png" alt="" style="line-height:80px; height:80px;"/>
-			Le BLOG des meilleures séries US</a>
+			My BLOG - Les meilleures séries US</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
