--- a/src/Views/article.twig
+++ b/src/Views/article.twig
@@ -13,26 +13,25 @@
 
 
 <h2>{{ article.title }}</h2>
-{{ session }}
+
 <h3>Vos commentaires ci-dessous :</h3>
   <form method="post" action="articles/read/{{ article.id }}" class="text-center border border-light p-5 comment">
   <p><input type="hidden"  name="id"        value=""></p>
   <p><input type="hidden"  name="posts_id"  value="{{ article.id }}"  id="defaultContactFormName" class="form-control mb-4"></p>
-  <p><input type="text"    name="user_id"   value="{{ session.user.id }}"  id="defaultContactFormName"                 class="form-control mb-4" placeholder="mettre 0 pour l'instant"></p>
-  {# <p><input type="text"    name="comment"   value "" id="defaultContactFormName"                  class="form-control ftext"  placeholder="ici !! votre commentaire " required data-validation-required-message="Veuillez entrer votre commentaire."></p> #}
+  <p><input type="hidden"    name="user_id"   value="{{ session.user.id }}"  id="defaultContactFormName" class="form-control mb-4" placeholder="mettre 0 pour l'instant"></p>
   <p><textarea rows="2" class="form-control ftext" id="comment" placeholder="Votre message" name="comment" required data-validation-required-message="Veuillez entrer votre commentaire."></textarea></p>
-  <p><input type="submit"                   value="envoyez"></p>
-</form> 
-{# 
-<form class="mt-5" enctype="multipart/form-data" method="post" action="../public/?id={{ post.id }}&p={{ p }}&access=blog!comment">
+  <p><input type="submit" value="envoyez"></p>
+</form>
+ 
+{# <form class="mt-5" enctype="multipart/form-data" method="post" action="articles/read/{{ article.id }}">
 	<div class="control-group">
 		<div class="form-group floating-label-form-group controls has-success">
 			<label class="font-weight-bold" for="comment">Vos commentaires :</label>
 			<textarea rows="2" class="form-control ftext" id="comment" placeholder="Votre message" name="comment" required data-validation-required-message="Veuillez entrer votre commentaire."></textarea>
-			<small class="form-text text-muted">Connexion nécessaire</small>
+			<small class="form-text text-muted">Connectez vous pour ajouter un commentaire</small>
 		</div>
 	</div>
-	{% if session.user.username is defined %}
+	{% if session.user.peudo is defined %}
 		<div class="form-group text-center">
 			<button type="submit" class="btn btn-outline-dark">Soumettre
 				<i class="fas fa-paper-plane"></i>
