--- a/src/Views/home.twig
+++ b/src/Views/home.twig
@@ -61,10 +61,11 @@
 
 {% block content2 %}
 <!-- Contact Form -->
-    <div class="container">
+    <div class="container"  id="contact">
         <div class="row has-success">
-            <div class="col-lg-8 col-md-10 mx-auto mt-5">
-                <h3 class="mb-3 border-bottom text-center col-12" id="contact">Me contacter</h3>
+            <div class="col-lg-8 col-md-10 mx-auto mt-5" style="top: 50px";
+>
+                <h3 class="mb-3 border-bottom text-center col-12" >Me contacter</h3>
 
                 <form name="sentMessage" id="contactForm" method="post" action="../public/?access=home!email">
                     <div class="control-group">
