--- a/src/Views/admin/admin_comment.twig
+++ b/src/Views/admin/admin_comment.twig
@@ -1,9 +1,9 @@
-{% extends 'Template/layout-admin.twig' %}
+{% extends 'Template/layout.twig' %}
 
 {% block content2 %}
 
 <form method="post" action="comments/edit_com/" class="text-center border border-light p-5">
-  <p class="h4 mb-4">Ajouter un article</p>
+  <p class="h4 mb-4">editer commentaires</p>
 
    <p><input type="hidden"    name="id"         value=""></p>
    <p><input type="hidden"    name="posts_id"   value="" id="defaultContactFormName" class="form-control mb-4" placeholder="Titre" ></p>
