--- a/src/Views/Article_edit.twig
+++ b/src/Views/Article_edit.twig
@@ -8,12 +8,14 @@
   <h2>{{ article.title }}</h2>
   <p class="h4 mb-4">gestion de l'article</p>
 
-   <p><input type="hidden"  name="id"         value="{{ article.id }}"></p>
-   <p><input type="text"    name="title"      value="{{ article.title }}" id="defaultContactFormName" class="form-control mb-4" placeholder="Titre" required></p>
-   <p><input type="text"    name="slug"       value="{{ article.slug }}" id="defaultContactFormName" class="form-control mb-4" placeholder="Slug" required></p>
-   <p><input type="text"    name="content"       value="{{ article.content }}" id="defaultContactFormName" class="form-control mb-4" placeholder="content" required></p>
-   {# <p><textarea             name="content"    value="{{ article.content }}" id="exampleFormControlTextarea2" class="form-control rounded-0"  rows="3" placeholder="Description" required></textarea></p>  #}
-   <p><input type="text"    name="url_images" value="{{ article.url_images }}" id="defaultContactFormName" class="form-control mb-4" placeholder="copier l'url de l'image" required></p>
+  <p><input type="hidden"  name="id"            value="{{ article.id }}"></p>
+  <p><input type="text"    name="title"         value="{{ article.title }}" id="defaultContactFormName" class="form-control mb-4" placeholder="Titre" required></p>
+  <p><input type="text"    name="slug"          value="{{ article.slug }}" id="defaultContactFormName" class="form-control mb-4" placeholder="Slug" required></p>
+  <p><input type="text"    name="content"       value="{{ article.content }}" id="defaultContactFormName" class="form-control mb-4" placeholder="content" required></p>
+  <p><input type="text"    name="url_images"    value="{{ article.url_images }}" id="defaultContactFormName" class="form-control mb-4" placeholder="copier l'url de l'image"></p>
+  <p><input type="hidden"  name="update_article" value="{{ article.update_article }}" id="defaultContactFormName" class="form-control mb-4"></p>
+  <p><input type="text"    name="posted"        value="{{ article.posted }}" id="defaultContactFormName" class="form-control mb-4"></p>
+     
    <p><input type="submit"  value="modifier"></p>
 
 </form>
