--- a/src/Views/article.twig
+++ b/src/Views/article.twig
@@ -1,4 +1,4 @@
-{% extends 'Template/layout-article.twig' %}
+{% extends 'Template/layout.twig' %}
 
 {% block content %}
 <h1>{{ article.title }} </h1>
@@ -11,42 +11,24 @@
 
 {% block form %}
 
-
 <h2>{{ article.title }}</h2>
-
+<p>{{  session }}</p>
+<p>{{  session.user }}</p>
+<p>vous êtes connecté en tant que : {{  session.user.pseudo }}</p>
 <h3>Vos commentaires ci-dessous :</h3>
   <form method="post" action="articles/read/{{ article.id }}" class="text-center border border-light p-5 comment">
   <p><input type="hidden"  name="id"        value=""></p>
   <p><input type="hidden"  name="posts_id"  value="{{ article.id }}"  id="defaultContactFormName" class="form-control mb-4"></p>
   <p><input type="hidden"    name="user_id"   value="{{ session.user.id }}"  id="defaultContactFormName" class="form-control mb-4" placeholder="mettre 0 pour l'instant"></p>
   <p><textarea rows="2" class="form-control ftext" id="comment" placeholder="Votre message" name="comment" required data-validation-required-message="Veuillez entrer votre commentaire."></textarea></p>
-  <p><input type="submit" value="envoyez"></p>
+  {% if session.user is defined %}
+  <p><input type="submit" value="envoyez" onclick="return window.confirm('votre message est en attente de validation !')"></p>  
+  {% else %}
+  <p>Pour laisser un message connectez-vous
+<a href="users/createUsers" type="button" class="btn btn-outline-success">Se connecter</a>
+  {% endif %}
 </form>
- 
-{# <form class="mt-5" enctype="multipart/form-data" method="post" action="articles/read/{{ article.id }}">
-	<div class="control-group">
-		<div class="form-group floating-label-form-group controls has-success">
-			<label class="font-weight-bold" for="comment">Vos commentaires :</label>
-			<textarea rows="2" class="form-control ftext" id="comment" placeholder="Votre message" name="comment" required data-validation-required-message="Veuillez entrer votre commentaire."></textarea>
-			<small class="form-text text-muted">Connectez vous pour ajouter un commentaire</small>
-		</div>
-	</div>
-	{% if session.user.peudo is defined %}
-		<div class="form-group text-center">
-			<button type="submit" class="btn btn-outline-dark">Soumettre
-				<i class="fas fa-paper-plane"></i>
-			</button>
-		</div>
-	{% endif %}
-</form> #}
+
 <hr>
 {% include 'comment.twig' with {'items': comments} %}
-{% block comment %}
-{% endblock comment %}
 {% endblock %}
-
-
-
-{% block rss %}
-
-{% endblock rss %}
