--- a/src/Views/Template/layout.twig
+++ b/src/Views/Template/layout.twig
@@ -11,12 +11,12 @@
 		<title>Blog - projet 5 OPC</title>
 
 		<!-- Bootstrap core CSS -->
-		<link
-		rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.boostrap4.min.css">
+		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
+		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jqc-1.12.4/dt-1.10.21/r-2.2.5/datatables.min.css"/>
 		<!-- Custom styles for this template -->
 		<link href="/projet-5/public/css/style2.css" rel="stylesheet">
-		<link href="https://uvc.one/upload/iblock/90b/90b5c0ded6201425e87396df554c9914.css" rel="stylesheet">
 
 	</head>
 
@@ -35,13 +35,24 @@
 					<div class="col-4"> {% block rss %}{% endblock %}
 					</div>
 				</div>
+				<div class="row">
+					<div class="col-10"> {% block form %}{% endblock %}
+					</div>
+				</div>
 			</div>
 		</section>
 		<section class="py-5">
 			<div class="container">
 				{% block content2 %}{% endblock %}
 			</div>
-		</section>
+		</section  style="margin-bottom: 50px";>
+
+		<section class="py-5">
+			<div class="container">
+				{% block content3 %}{% endblock %}
+			</div>
+		</section  style="margin-bottom: 50px";>
+
 		<section>
 			{% include 'Template/footer.twig' %}
 		</section>
