--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -28,7 +28,7 @@
 				</li>
 				{% if session.user is defined %}
 				<li class="nav-item">
-					<a class="nav-link" href="Auth/login/">Mon profil</a>
+					<a class="nav-link" href="Auth/member/">Mon profil</a>
 				</li>
 					<li class="nav-item">
 						<a class="nav-link" id="pseudo">{{ session.user.pseudo }}</a>
