--- a/src/Views/Template/layout.twig
+++ b/src/Views/Template/layout.twig
@@ -3,20 +3,21 @@
 
 	<head>
 
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		<meta name="author" content="">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="description" content="" />
+		<meta name="author" content="" />
 
 		<title>Blog - projet 5 OPC</title>
 
 		<!-- Bootstrap core CSS -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.boostrap4.min.css">
-		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.boostrap4.min.css" />
+		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" />
 		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jqc-1.12.4/dt-1.10.21/r-2.2.5/datatables.min.css"/>
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
 		<!-- Custom styles for this template -->
-		<link href="/projet-5/public/css/style2.css" rel="stylesheet">
+		<link href="/projet-5/public/css/style2.css" rel="stylesheet" />
 
 	</head>
 
@@ -41,20 +42,21 @@
 				</div>
 			</div>
 		</section>
-		<section class="py-5">
+		<section class="py-5" style="margin-bottom: 50px";>
 			<div class="container">
 				{% block content2 %}{% endblock %}
 			</div>
-		</section  style="margin-bottom: 50px";>
+		</section>
 
-		<section class="py-5">
+		<section class="py-5" style="margin-bottom: 50px";>
 			<div class="container">
 				{% block content3 %}{% endblock %}
 			</div>
-		</section  style="margin-bottom: 50px";>
+		</section>
 
 		<section>
 			{% include 'Template/footer.twig' %}
 		</section>
+		{% block javascript %}{% endblock %}
 	</body>
 </html>
