--- a/src/Views/admin/admin_index.twig
+++ b/src/Views/admin/admin_index.twig
@@ -2,12 +2,154 @@
 
 {% block content2 %}
 <h2> {{ titleAdm }}</h2>
+<div id="tabs">
+  <h3>Commentaires - (à valider {{ nbComments  }}) </h3>
+  <div><div class="table-responsive">
+    <table class="table table-striped table-bordered dislay" id="mytable">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Article</th>
+          <th scope="col">Commentaire</th>
+          <th scope="col">date</th>
+          <th scope="col">validation</th>
+          <th scope="col">action</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for comment in comments %}
+        <tr>
+          <th scope="row">{{ comment.id }}</th>
+          <td>{{ comment.title }}</td>
+          <td>{{ comment.pseudo }} - {{ comment.comment }}</td>
+          <td>{{ comment.date_comment|date("d/m/Y") }}</td>
+          <td>{{ comment.validate }}</td>
+          <td style="border-left-width: 10px; border-left-color:transparent;">
+            <div class="row">
+              <div class="btn-group">
+              <a href="#" id="{{ comment.id }}"></a>
+              <a href="comments/validateComment/{{comment.id}}" onclick="return window.confirm('Validation du commentaire !')" id="{{ comment.id }}" class="btn btn-success btn-sm">valider</button></a>
+              <a href="comments/delete/{{comment.id}}" onclick="return window.confirm('Attention suppression definitive du commentaire !')" class="btn btn-danger btn-sm">Supprimer</button></a>
+              {# <a href="comments/update/{{comment.id}}" class="btn btn-primary btn-sm">Editer</button></a> #}
+              </div>
+            </div>
+          </td>
+        </tr>
+      {% endfor %}
+      </tbody>
+      <tfoot>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Article</th>
+          <th scope="col">Commentaire</th>
+          <th scope="col">date</th>
+          <th scope="col">validée</th>
+          <th scope="col">action</th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
+</div>
+  <h3>Articles ({{ nbArticles  }} non publié(s))</h3>
+  <div>
+    <table class="table table-striped table-bordered dislay" id="mytable2">
+    <thead>
+    <tr>
+        <th>id</th>
+        <th>image</th>
+        <th>titre</th>
+        <th>slug</th>
+        <th>content</th>
+        <th>date creation</th>
+        <th>Publier</th>
+        <th>Date maj</th>
+				<th>Action</th>
+    </tr>
+    <thead>
+    <tbody>
+{% for article in articles %}
+    <tr>
+      <td>{{ article.id }}</td>
+      <td><img id="img_blog_admin" src="{{ article.url_images }}" alt="..." ></td>
+      <td>{{ article.title }}</td>
+      <td>{{ article.slug|slice(0, 55) }} ...</td>
+      <td>{{ article.content|slice(0, 55) }} ...</td>
+      <td>{{ article.date_creation|date("d/m/y G:i:s") }}</td>
+      <td>{{ article.posted }}</td>
+      <td>{{ article.update_article }}</td>
+      <td style="border-left-width: 10px; border-left-color:transparent;">
+          <div class="row">
+                <div class="btn-group">
+                <a href="#" id="{{ article.id }}"></a>
+                <a href="articles/postedArticles/{{article.id}}" onclick="return window.confirm('L\'article est publié !')" id="{{ comment.id }}" class="btn btn-success btn-sm">publier</button></a>
+                <a href="articles/delete/{{article.id}}"  onclick="return window.confirm('Attention suppression definitive de l\'article !')" class="btn btn-danger btn-sm">Supprimer</button></a>
+                <a href="articles/update/{{article.id}}" id="{{ articles.id }}" class="btn btn-primary btn-sm">Editer</button></a>
+                </div>
+          </div>
+        </td>
+    </tr>
+   {% endfor %}
+   </tbody>
+</table>
+<hr>
+<form method="post" action="Articles/edit/" class="text-center border border-light p-5">
+	<p class="h4 mb-4">Ajouter un article</p>
+	<p><input type="hidden" name="id" value=""></p>
+	<p><input type="text" name="title" value="" id="defaultContactFormName" class="form-control mb-4" placeholder="Titre" required></p>
+	<p><input type="text" name="slug" value="" id="defaultContactFormName" class="form-control mb-4" placeholder="Slug" required></p>
+	<p><input type="text" name="content" value="" id="defaultContactFormName" class="form-control mb-4" placeholder="Description" required></p>
+	<p><input type="text" name="url_images" value="" id="defaultContactFormName" class="form-control mb-4" placeholder="copier l'url de l'image"></p>
+	<p><input type="submit" value="envoyer"></p>
+
+</form>
+  </div>
+  <h3>Utilisateurs ({{ nbUsers  }} non validé(s))</h3>
+  <div>
+    <h1> Liste des utilisateurs </h1>
+<a href="users/createUsers">
+			<button type="button" class="btn btn-success">ajouter</button></a>
+
+<br />
+<table class="table table-striped table-bordered dislay" id="mytable3">
+    <thead>
+    <tr>
+        <th>id</th>
+        <th>pseudo</th>
+        <th>email</th>
+        <th>mot de passe</th>
+        <th>rôle</th>
+        <th>Editer</th>
+				<th>supprimer</th>
+    </tr>
+    <thead>
+    <tbody>
+{% for user in users %}
+    <tr>
+       <td>{{ user.id }}</td>
+       <td>{{ user.pseudo }}</td>
+       <td>{{ user.email }}</td>
+       <td>{{ ' ... '~user.password|slice(0,20)~' ...'}}</td>
+       <td>{{ user.role }}</td>
+       <td>
+			<a href="users/update/{{user.id}}">
+			<button type="button" class="btn btn-warning">modifier</button>
+		</td>
+		<td>
+			<a href="users/delete/{{user.id}}" onclick="return window.confirm('Êtes-vous certain de vouloir supprimer cette utilisateur ?!')"> 
+			<button  type="button" class="btn btn-danger" >supprimer</button></a>
+		</td> 
+    </tr>
+   {% endfor %}
+   </tbody>
+</table>  
+  </div>
+</div>
+ 
 {# <br/><br/>
 <a href="users/listUsers/"><button type="button" class="btn btn-primary btn-lg">Gestion des utilisateurs</button></a>
 <a href="Articles/edit"><button type="button" class="btn btn-primary btn-lg">Gestion des articles</button></a> #}
-<br/>
-<br/>
-<div class="row">
+
+{# <div class="row">
 	<div class="col-12 col-md-4 col-lg-4">
 		<div class="jumbotron">
 			<h2>Utilisateurs</h2>
@@ -33,54 +175,38 @@
 			</p>
 		</div>
 	</div>
-</div>
-
-<div class="table-responsive">
-  <table class="table table-striped table-bordered mytable dislay">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Article</th>
-        <th scope="col">Commentaire</th>
-        <th scope="col">date</th>
-        <th scope="col">validation</th>
-        <th scope="col">action</th>
-      </tr>
-    </thead>
-    <tbody>
-{% for comment in comments %}
-      <tr>
-        <th scope="row">{{ comment.id }}</th>
-        <td>{{ comment.title }}</td>
-        <td>{{ comment.pseudo }} - {{ comment.comment }}</td>
-        <td>{{ comment.date_comment|date("d/m/Y") }}</td>
-        <td>{{ comment.validate }}</td>
-        <td style="border-left-width: 10px; border-left-color:transparent;">
-          <div class="row">
-                <div class="btn-group">
-                <a href="#" id="{{ comment.id }}"></a>
-                <a href="comments/validateComment/{{comment.id}}" onclick="return window.confirm('Validation du commentaire !')" id="{{ comment.id }}" class="btn btn-success btn-sm">valider</button></a>
-                <a href="comments/delete/{{comment.id}}" onclick="return window.confirm('Attention suppression definitive du commentaire !')" class="btn btn-danger btn-sm">Supprimer</button></a>
-                {# <a href="comments/update/{{comment.id}}" class="btn btn-primary btn-sm">Editer</button></a> #}
-                </div>
-          </div>
-        </td>
-      </tr>
-{% endfor %}
-<tfoot>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Article</th>
-        <th scope="col">Commentaire</th>
-        <th scope="col">date</th>
-        <th scope="col">validée</th>
-        <th scope="col">action</th>
-      </tr>
-</tfoot>
-    </tbody>
-  </table>
-</div>
-
-
+</div> #}
 {% endblock content2 %}
 
+{% block javascript %}
+  <!-- Bootstrap core JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  {# <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> #}
+  {# <script src="https://code.jquery.com/jquery-1.12.4.js"></script> #}
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.7/js/tether.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+  
+<!-- JavaScript -->
+  <script>
+    $(document).ready(function() {
+      $('#mytable').DataTable( {
+        "lengthMenu": [[5, 10, 25, 50, -1], [5, 10, 25, 50, "All"]]
+        } );
+      $('#mytable2').DataTable( {
+        "lengthMenu": [[5, 10, 25, 50, -1], [5, 10, 25, 50, "All"]]
+        } );
+      $('#mytable3').DataTable( {
+        "lengthMenu": [[5, 10, 25, 50, -1], [5, 10, 25, 50, "All"]]
+        } );
+      
+      //initialize tabs
+      $( "#tabs" ).accordion(
+        {collapsible: true}
+      );
+    } );
+  </script>
+{% endblock %}
