--- a/src/Views/User_edit.twig
+++ b/src/Views/User_edit.twig
@@ -71,7 +71,7 @@
 		<p><input type="submit" name="formuser" value="envoyez"/></p>
 		{% if action == 'update' %}
 			<p>
-				<a class="btn btn-primary" href="users/listUsers/" role="button">Retour</a>
+				<a class="btn btn-primary" href="admin/edit/" role="button">Retour</a>
 			</p>
 		{% endif %}
 	</form>
