--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -41,7 +41,10 @@
 				</div>
 				{% else %}
 					<div class=" rounded-top my-2 my-lg-0">
-						<a href="users/createUsers" type="button" class="btn btn-outline-success">Se connecter</a>
+						<a href="Auth/login" type="button" class="btn btn-outline-success">Se connecter</a>
+					</div>
+					<div class=" rounded-top my-2 my-lg-0">
+						<a href="Users/createUsers" type="button" class="btn btn-outline-warning">S'inscrire</a>
 					</div>
 				{% endif %}
 			</ul>
