--- a/src/Views/inscription.twig
+++ b/src/Views/inscription.twig
@@ -12,80 +12,35 @@
 			{% endfor %}
 		</div>
 	{% endif %}
-	{% if bienvenue %}
-		<div class="alert alert-sucess">
-			{% for msg in bienvenue %}
-				<ul>
-					<li>{{ msg }}</li>
-				</ul>
-			{% endfor %}
-		</div>
-	{% endif %}
-	<div class="container register">
-		<div class="row">
-			<div class="col-md-12">
-				<ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
-					<li class="nav-item">
-						<a class="nav-link  active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Se connecter</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">S'inscrire</a>
-					</li>
-				</ul>
-				<div class="tab-content" id="myTabContent">
-					<div class="tab-pane fade show  text-align form-new" id="home" role="tabpanel" aria-labelledby="home-tab">
-						<h3 class="register-heading">S'inscrire</h3>
-						<div class="row register-form">
-							<div class="col-md-12">
-								<form method="post">
-									<div class="form-group">
-										<input type="email" name="email" class="form-control" placeholder="Your Email *" value="{{ user.email }}" required/>
-									</div>
-									<div class="form-group">
-										<input type="email2" name="email2" class="form-control" placeholder="Confimed Email  *" value="{{ user.email2 }}"/>
-									</div>
-									<div class="form-group">
-										<input type="text" name="pseudo" class="form-control" placeholder="Your pseudo *" value="{{ user.pseudo }}"/>
-									</div>
-									<div class="form-group">
-										<input type="password" name="password" class="form-control" placeholder="Your Password *" value="{{ user.password }}"/>
-									</div>
-									<div class="form-group">
-										<input type="password" name="password2" class="form-control" placeholder="Confirmed Password *" value="{{ user.password }}"/>
-									</div>
-									<div class="form-group">
-										<input type="text" name="role" class="form-control" placeholder="Your role *" value="{{ user.role }}"/>
-									</div>
-									<div class="form-group">
-										<input type="submit" name="formuser" class="btnContactSubmit" value="Login"/>
-										<a href="ForgetPassword.php" class="btnForgetPwd" value="Login">Forget Password?</a>
-									</div>
-								</form>
-							</div>
-						</div>
+<div class="container" id="contact">
+	<div class="row has-success">
+		<div class="col-lg-8 col-md-10 mx-auto mt-5" style="top: 50px" ;>
+			<h3 class="mb-3 border-bottom text-center col-12">S'incrire</h3>
+				<form method="post" action="Users/createUsers/">
+					<div class="form-group">
+						<input type="email" name="email" class="form-control" placeholder="Your Email *" value="{{ user.email }}" required/>
 					</div>
-              
-					<div class="tab-pane fade show active text-align form-new" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-						<h3 class="register-heading">Se connecter</h3>
-						<div class="row register-form">
-							<div class="col-md-12">
-								<form method="post" action="auth/login/">
-									<div class="form-group">
-										<input type="email" name="email" class="form-control" placeholder="Your Email *" value="" required=""/>
-									</div>
-									<div class="form-group">
-										<input type="password" name="password" class="form-control" placeholder="Your Password *" value="" required=""/>
-									</div>
-									<div class="form-group">
-										<input type="submit" name="LGform2" class="btnContactSubmit" value="Login"/>
-										<a href="ForgetPassword.php" class="btnForgetPwd" value="Login">Forget Password?</a>
-									</div>
-								</form>
-							</div>
-						</div>
+					<div class="form-group">
+						<input type="email2" name="email2" class="form-control" placeholder="Confimed Email  *" value="{{ user.email2 }}"/>
 					</div>
+					<div class="form-group">
+						<input type="text" name="pseudo" class="form-control" placeholder="Your pseudo *" value="{{ user.pseudo }}"/>
+					</div>
+					<div class="form-group">
+						<input type="password" name="password" class="form-control" placeholder="Your Password *" value="{{ user.password }}"/>
+					</div>
+					<div class="form-group">
+						<input type="password" name="password2" class="form-control" placeholder="Confirmed Password *" value="{{ user.password }}"/>
+					</div>
+				<div class="form-group text-center">
+					<button type="submit" class="btn btn-outline-dark" name="formuser">Envoyer
+						<i class="fas fa-paper-plane"></i>
+					</button>
 				</div>
+				</form>
 			</div>
 		</div>
 	</div>
-</div>{% endblock content %}
+              
+
+{% endblock content %}
