Fix control session

--- a/src/Views/Template/footer.twig
+++ b/src/Views/Template/footer.twig
@@ -7,7 +7,7 @@
       {% if session.user is defined %} 
       <img class="card_img" src="public/images/admin.png" alt="" style="line-height:20px; height:20px;"/>
       {% else %}
-				<a href="users/createUsers"><img class="card_img" src="public/images/admin.png" alt="" style="line-height:20px; height:20px;"/> se connecter</a>
+				<a href="Auth/login"><img class="card_img" src="public/images/admin.png" alt="" style="line-height:20px; height:20px;"/> se connecter</a>
 			{% endif %}
       </p>
 		</div>
