--- a/src/Views/Template/navbar.twig
+++ b/src/Views/Template/navbar.twig
@@ -9,9 +9,9 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active">
+				<li class="nav-item">
 					<a class="nav-link" href="">Home
-						<span class="sr-only">(current)</span>
+						<span class="sr-only"></span>
 					</a>
 				</li>
 				<li class="nav-item">
@@ -31,10 +31,10 @@
 					<a class="nav-link" href="Auth/member/">Mon profil</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" id="pseudo">{{ session.user.pseudo }}</a>
+					<a class="nav-link" href="admin/edit/">Administration</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="admin/edit/">Administration</a>
+					<a class="nav-link" id="pseudo">{{ session.user.pseudo }}</a>
 				</li>
 				<div class="rounded-top my-2 my-lg-0">
 					<a href="Auth/logout" type="button" class="btn btn-danger">Deconnexion</a>
